--- a/Marcos_Pizza/Views/Orders/Create.cshtml
+++ b/Marcos_Pizza/Views/Orders/Create.cshtml
@@ -8,7 +8,7 @@
 <h1>Create</h1>
 
 <h4>Orders</h4>
-<hr />
+
 <div class="row">
     <div class="col-md-4">
         <form asp-action="Create">
@@ -23,30 +23,35 @@
                 <input asp-for="Product_Name" readonly class="form-control" />
                 <span asp-validation-for="Product_Name" class="text-danger"></span>
             </div>
+            <br />
             <div class="form-group">
                 <label asp-for="Product_Name" class="control-label"></label>
                 <input asp-for="Payment_Method" hidden readonly class="form-control" />
                 <span asp-validation-for="Payment_Method" class="text-danger"></span>
             </div>
+            <br />
             <div class="form-group">
                 <label asp-for="Datetime_Created" class="control-label"></label>
                 <input asp-for="Datetime_Created"hidden readonly class="form-control" />
                 <span asp-validation-for="Datetime_Created" class="text-danger"></span>
             </div>
+            <br />
+            <br />
             <div class="form-group">
                 <label asp-for="Cost" class="control-label"></label>
                 <input asp-for="Cost" readonly class="form-control" />
                 <span asp-validation-for="Cost" class="text-danger"></span>
             </div>
-
+            <br />
+            <br />
             <div class="form-group">
                 <label asp-for="Product_Description" class="control-label"></label>
                 <textarea asp-for="Product_Name" readonly class="form-control"></textarea>
                 <span asp-validation-for="Product_Description" class="text-danger"></span>
 
             <div class="form-group">
-                <input  type="submit" value="Create" class="btn btn-primary" />
-            </div>
+                <input  type="submit" value="Create" class="btn btn-green" />
+            </div> 
         </form>
     </div>
 </div>
