--- a/Marcos_Pizza/Views/Products/Create.cshtml
+++ b/Marcos_Pizza/Views/Products/Create.cshtml
@@ -17,29 +17,37 @@
                 <input asp-for="Product_Name" class="form-control" />
                 <span asp-validation-for="Product_Name" class="text-danger"></span>
             </div>
+            <br />
             <div class="form-group">
                 <label asp-for="Product_Description" class="control-label"></label>
                 <textarea asp-for="Product_Description" class="form-control" > </textarea>
                 <span asp-validation-for="Product_Description" class="text-danger"></span>
             </div>
+            <br />
             <div class="form-group">
                 <label asp-for="Product_Cost" class="control-label"></label>
                 <input asp-for="Product_Cost" class="form-control" />
                 <span asp-validation-for="Product_Cost" class="text-danger"></span>
             </div>
+            <br />
             <div class="form-group">
                 <label asp-for="Product_Code" class="control-label"></label>
                 <input asp-for="Product_Code" class="form-control" />
                 <span asp-validation-for="Product_Code" class="text-danger"></span>
             </div>
-            <div class="form-group">
-                <input type="submit" value="Create" class="btn btn-primary" />
+            <br />
+            
+            <div class="col" class="btn btn-primary class="form-group">
+                <input type="submit" value="Create" class="btn btn-primary btn-group-sm" />
+                <a asp-action="Index" class="btn btn-dark btn-group-sm ">Back to List</a>
             </div>
         </form>
     </div>
 </div>
 
-<div>
+
+
+@* <div>
     <a asp-action="Index">Back to List</a>
 </div>
-
+ *@
