--- a/Marcos_Pizza/Views/Products/Index.cshtml
+++ b/Marcos_Pizza/Views/Products/Index.cshtml
@@ -26,7 +26,7 @@
                     <p class="card-text">@item.Product_Name</p>
                     <div class="d-flex justify-content-between align-items-center">
                         <div class="btn-group">
-                                <a  asp-controller="Orders" asp-action="Create" asp-route-id="@item.Id" type="button" class="button" style="vertical-align:middle" class="btn btn-sm btn-outline-secondary">< >Order</a>
+                                <a  asp-controller="Orders" asp-action="Create" asp-route-id="@item.Id" type="button"  class="btn btn-sm btn-outline-secondary">< >Order</a>
                                 <a  asp-controller="Products" asp-action="Delete" asp-route-id="@item.Id" type="button" class="button" style="vertical-align:middle" class="btn btn-sm btn-outline-secondary">< >Order</a>
                      </div>
                     </div>
