--- a/Marcos_Pizza/Views/Products/Create.cshtml
+++ b/Marcos_Pizza/Views/Products/Create.cshtml
@@ -37,9 +37,9 @@
             </div>
             <br />
             
-            <div class="col" class="btn btn-primary class="form-group">
-                <input type="submit" value="Create" class="btn btn-primary btn-group-sm" />
-                <a asp-action="Index" class="btn btn-dark btn-group-sm ">Back to List</a>
+            <div class="col"  class="form-group">
+                <input type="submit" value="Create" class="btn btn-primary " />
+                <a asp-action="Index" class="btn btn-dark btn-group small ">Back to List</a>
             </div>
         </form>
     </div>
