--- a/Marcos_Pizza/Views/Orders/Index.cshtml
+++ b/Marcos_Pizza/Views/Orders/Index.cshtml
@@ -15,7 +15,7 @@
     @foreach (var item in Model) 
     {
                 <div class="container ">
-                    <div class="col-3">
+                    <div class="col-6">
                         <div class="card shadow-sm">
                             <div class="text-center">
                             <div class="card-body font= 1em ">
@@ -23,7 +23,7 @@
                                 <p class="card-text">@item.Product_Description</p>
                                 <div class="d-flex justify-content-between align-items-center">
                                     <div class="btn-group">
-                                        <a asp-controller="Orders" asp-action="Details" asp-route-id="@item.Id" type="button" class="btn btn-sm btn-outline-secondary btn-dark text-center text-white ">Order</a>
+                                        <a asp-controller="Orders" asp-action="Create" asp-route-id="@item.Id" type="button" class="btn btn-sm btn-outline-secondary btn-dark text-center text-white ">Order</a>
                                     </div>
                                 </div>
                             </div>
