--- a/Marcos_Pizza/Views/Orders/Index.cshtml
+++ b/Marcos_Pizza/Views/Orders/Index.cshtml
@@ -32,6 +32,19 @@
                 </div>
               </div>
   }           <br />
+
+
+
+
+
+
+
+    @section Scripts
+        {
+        <script>
+            $(function ())
+        </script></>
+    }
 </main>        
             
                
