--- a/Marcos_Pizza/Views/Products/Index.cshtml
+++ b/Marcos_Pizza/Views/Products/Index.cshtml
@@ -18,6 +18,7 @@
        <div class="container ">
         <div class="col-6">
             <div class="card shadow-sm">
+                 <div class="text-center">
                 <div class="card-body font= 1em ">
                     <h3>@item.Product_Name</h3>
                     <p class="card-text">@item.Product_Description</p>
@@ -30,10 +31,9 @@
             </div>
         </div>
         </div>
+        </div>
         <br />
     }
-
-
 
     @section Scripts
     {
@@ -42,8 +42,6 @@
         </script></>
     }
 
-
-    
 
 </main>
 
