--- a/Marcos_Pizza/Views/Orders/Create.cshtml
+++ b/Marcos_Pizza/Views/Orders/Create.cshtml
@@ -52,6 +52,13 @@
             </div>
 
             <br />
+            <div class="form-group">
+                <label asp-for="Customer_Name" class="control-label"></label>
+                <input asp-for="Customer_Name" class="form-control" />
+                <span asp-validation-for="Customer_Name" class="text-danger"></span>
+            </div>
+
+            <br />
             <div class="col" class="form-group ">
                 <input type="submit" value="Create" class="btn btn-primary " />
                 <a asp-action="Index" class="btn btn-dark btn-group small" >Back to List</a>
