--- a/Marcos_Pizza/Views/Orders/Index.cshtml
+++ b/Marcos_Pizza/Views/Orders/Index.cshtml
@@ -14,29 +14,28 @@
 <main> 
     @foreach (var item in Model) 
     {
-                <div class="container ">
-                    <div class="col-3">
-                        <div class="card shadow-sm">
-                            <div class="text-center">
-                            <div class="card-body font= 1em ">
+        <div class="container mt-4">
+            <div class="row row-cols-1 row-cols-md-3">
+                //start for each
+                <div class="col mb-4">
+                    <div class="card shadow-sm">
+                        <div class="text-center">
+                            <div class="card-body font-1em">
                                 <h3>@item.Product_Name</h3>
                                 <p class="card-text">@item.Product_Description</p>
                                 <div class="d-flex justify-content-between align-items-center">
                                     <div class="btn-group">
-                                        <a asp-controller="Orders" asp-action="Details" asp-route-id="@item.Id" type="button" class="btn btn-sm btn-outline-secondary btn-dark text-center text-white ">Order</a>
+                                        <a asp-controller="Orders" asp-action="Details" asp-route-id="@item.Id" type="button" class="btn btn-sm btn-outline-secondary btn-dark text-center text-white">Order</a>
                                     </div>
                                 </div>
                             </div>
                         </div>
                     </div>
                 </div>
-              </div>
-  }           <br />
-
-
-
-
-
+                //end for each
+            </div>
+        </div>
+  }           
 
 
     @section Scripts
