--- a/Marcos_Pizza/Views/Orders/Index.cshtml
+++ b/Marcos_Pizza/Views/Orders/Index.cshtml
@@ -4,6 +4,25 @@
     ViewData["Title"] = "Index";
 }
 
+<head>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
+
+</head>
+
+<style>
+    .card {
+        transition: transform 0.3s ease, box-shadow 0.3s ease;
+    }
+
+        .card:hover {
+            transform: scale(1.03);
+            box-shadow: 0 6px 12px rgba(0, 0, 0, 0.12), 0 3px 6px rgba(0, 0, 0, 0.06);
+        }
+
+    }
+</style>
+
 <h1>Index</h1>
 
 <p>
@@ -12,30 +31,31 @@
 
 
 <main> 
+    <div class="container  mt-4">
+        <div class="row row-cols-1 row-cols-md-3 ">
+
     @foreach (var item in Model) 
-    {
-        <div class="container mt-4">
-            <div class="row row-cols-1 row-cols-md-3">
-                //start for each
+    {         
                 <div class="col mb-4">
-                    <div class="card shadow-sm">
+                    <div class="card shadow-sm rounded-3">
                         <div class="text-center">
-                            <div class="card-body font-1em">
+                            <div class="card-body font= 1em ">
                                 <h3>@item.Product_Name</h3>
                                 <p class="card-text">@item.Product_Description</p>
                                 <div class="d-flex justify-content-between align-items-center">
                                     <div class="btn-group">
-                                        <a asp-controller="Orders" asp-action="Details" asp-route-id="@item.Id" type="button" class="btn btn-sm btn-outline-secondary btn-dark text-center text-white">Order</a>
+                                        <a asp-controller="Orders" asp-action="Details" asp-route-id="@item.Id" type="button" class="btn btn-sm btn-outline-secondary btn-dark text-center text-white ">Order</a>
                                     </div>
                                 </div>
                             </div>
                         </div>
                     </div>
                 </div>
-                //end for each
-            </div>
+               
+  }
+
         </div>
-  }           
+    </div>
 
 
     @section Scripts
