--- a/Marcos_Pizza/Views/Orders/Index.cshtml
+++ b/Marcos_Pizza/Views/Orders/Index.cshtml
@@ -45,6 +45,8 @@
                                 <div class="d-flex justify-content-between align-items-center">
                                     <div class="btn-group">
                                         <a asp-controller="Orders" asp-action="Details" asp-route-id="@item.Id" type="button" class="btn btn-sm btn-outline-secondary btn-dark text-center text-white ">Order</a>
+                                        <a asp-controller="Orders" asp-action="Edit" asp-route-id="@item.Id" type="button" class="btn btn-sm btn-outline-secondary btn-primary text-center text-white ">Order</a>
+                                        <a asp-controller="Orders" asp-action="Delete" asp-route-id="@item.Id" type="button" class="btn btn-sm btn-outline-secondary btn-primary text-center text-white ">Order</a>
                                     </div>
                                 </div>
                             </div>
